Fixed .op-button misalignment when selected

--- a/css/pr-tournament-boardmap.css
+++ b/css/pr-tournament-boardmap.css
@@ -463,8 +463,10 @@ div#Op-Header-Icons {
 
 .op-button {
     float: left;
-		position: relative;
-		padding: 5px 0px;
+    position: relative;
+    padding: 5px 0px;
+    border-bottom: solid 1px transparent;
+    border-top: solid 1px transparent;
 }
 
 .op-button img {
